Fix align-center

--- a/src/grid/Collumn/Collumn.scss
+++ b/src/grid/Collumn/Collumn.scss
@@ -13,7 +13,7 @@
     align-self: flex-start;
   }
 
-  &.center-left {
+  &.align-center {
     align-self: center;
   }
 
